# libgrowl

./: .gitignore  AUTHORS  ChangeLog  ChangeRequest  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.unix  NEWS  README.md  ROADMAP  TODO  configure  configure.ac  control  doxygen.conf  libgrowl.pc  libgrowl.pc.in  myconfig_guess
.github/workflows/: c-cpp.yml
cmocka/: Makefile  Makefile.am  Makefile.in  Makefile.macos  Makefile.unix  automake_disable_libnotify.sh  bsd_get_platform_name_test.c  check_default_setting_test.c  donot_install_growlserverhack_test.sh  gntp_decode_message_test.c  gntp_decode_reply_test.c  gntp_get_header_value_test.c  libgrowl_minimalist_mode_test.c  libgrowl_set_growl_server_test.c  libgrowl_unix_get_system_name_test.c  param_test.c  run_unit_test.sh  serverhack_test.c
doc/: Readme  docker_cheatsheet.md  server_process_flow.md
docker/alpine_automake/: Dockerfile
examples/: Makefile  Makefile.am  Makefile.in  Makefile.unix  growlnotify.c  param.c  param.h  serverhack.c  test_verbose.c
libgrowl.xcodeproj/: project.pbxproj
libgrowl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libgrowl.xcodeproj/project.xcworkspace/xcuserdata/fuyichin.xcuserdatad/: UserInterfaceState.xcuserstate
libgrowl.xcodeproj/xcuserdata/fuyichin.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Makefile  Makefile.am  Makefile.in  Makefile.unix  libgrowl.c  libgrowl.h  mygntp.h
